# Qfinder

./: .gitignore  Install.md  LICENSE  README.md  compare.py  devlog.md  install.sh
daemon/: Cargo.toml
daemon/src/: clipboard.rs  db.rs  main.rs  search.rs  watcher.rs
extension/: package-lock.json  package.json  raycast-env.d.ts  tsconfig.json
extension/src/: daemon.ts  index.tsx  manage.tsx
qfinder.app/Contents/: Info.plist
qfinder.app/Contents/MacOS/: qfinder
qfinder.app/Contents/Resources/: qfinder-daemon
qfinder.app/Contents/_CodeSignature/: CodeResources
