[package]
name = "qfinder-daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.29", features = ["bundled", "functions"] }
notify = { version = "6", features = ["macos_fsevent"] }
notify-debouncer-mini = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strsim = "0.10"
objc = "0.2"
cocoa = "0.24"
libc = "0.2"
shellexpand = "3.1"
chrono = "0.4"
urlencoding = "2.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
